# scandium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  scandium_test.cpp  test_scandium.cpp
include/: scandium.h
